--- a/templates/channels/types/twiml_api/claim.haml
+++ b/templates/channels/types/twiml_api/claim.haml
@@ -2,5 +2,5 @@
 -load i18n
 
 -block pre-form
-  -blocktrans
+  -blocktrans trimmed
     You can add a TwiML REST API as a channel using your TwiML instance.
