--- a/templates/channels/types/verboice/claim.haml
+++ b/templates/channels/types/verboice/claim.haml
@@ -3,5 +3,5 @@
 
 
 -block pre-form
-  -blocktrans
+  -blocktrans trimmed
     You can connect your <a href="http://verboice.instedd.org/">Verboice</a> number by entering your credentials here.
