--- a/templates/flows/flow_broadcast.haml
+++ b/templates/flows/flow_broadcast.haml
@@ -19,7 +19,7 @@
 
   -elif object.flow_type == 'V' and not call_channel
     %p
-      -blocktrans with name=brand.name
+      -blocktrans trimmed with name=brand.name
         To get started you need to add a voice-enabled channel to your workspace. A voice-enabled channel is a
         phone number which {{ name }} can use to make and receive phone calls on your behalf. For example, Twilio
         is a service which provides voice-enabled numbers which you can add as channels in your {{ name }} workspace.
