--- a/templates/orgs/org_delete.haml
+++ b/templates/orgs/org_delete.haml
@@ -7,5 +7,5 @@
     %span.font-normal
       {{object}}.
 
-  -blocktrans
+  -blocktrans trimmed
     Are you sure you want to delete everything for this org? This cannot be undone. Any logins which only belong to this workspace will also be deleted.
