--- a/templates/orgs/org_resthooks.haml
+++ b/templates/orgs/org_resthooks.haml
@@ -5,7 +5,7 @@
 -block pre-form
 
   .mb-4
-    -blocktrans
+    -blocktrans trimmed
       You can create flow events which external services can subscribe to. For example, Zapier can subscribe
       to flow events you create and trigger any number of Zapier integrations when they occur in your flows.
 
