--- a/templates/channels/types/twilio/claim.haml
+++ b/templates/channels/types/twilio/claim.haml
@@ -1,13 +1,11 @@
 -extends "channels/channel_claim_number.html"
+-load compress temba i18n
 
--load compress temba
--load i18n
-
-- block account-trial-warning
-  - if account_trial
+-block account-trial-warning
+  -if account_trial
     .alert-warning.my-4
-      - blocktrans
+      -blocktrans trimmed
         You have connected a Twilio Trial Account which has some restrictions.
       %br
       %a{href:"https://www.twilio.com/help/faq/twilio-basics/how-does-twilios-free-trial-work"}
-        - trans "Read more about the limits placed on Twilio's Free Trial numbers."
+        -trans "Read more about the limits placed on Twilio's Free Trial numbers."
