--- a/templates/classifiers/classifier_connect.haml
+++ b/templates/classifiers/classifier_connect.haml
@@ -5,13 +5,13 @@
   -trans "Connect a Classifier"
 
 -block content
-  -blocktrans
+  -blocktrans trimmed
     Classifiers let you interpret words and phrases into intents you can act on. Various services let you
     train your own classifier which you can then use in your flows to draw meaning from the unstructured text your
     contacts send you.
 
   .mt-2
-    -blocktrans
+    -blocktrans trimmed
       Select your provider below to get started.
 
   .classifier-options
