--- a/templates/contacts/contact_history.haml
+++ b/templates/contacts/contact_history.haml
@@ -10,7 +10,7 @@
       -if event.type == 'airtime_transferred'
         -with event.obj as transfer
           -if transfer.status == 'S'
-            -blocktrans with amount=transfer.actual_amount currency=transfer.currency
+            -blocktrans trimmed with amount=transfer.actual_amount currency=transfer.currency
               Transferred <b>{{ amount }}</b> <b>{{ currency }}</b> of airtime
           -else
             -trans "Airtime transfer failed"
@@ -62,10 +62,10 @@
 
       -elif event.type == 'contact_field_changed'
         -if event.value
-          -blocktrans with name=event.field.name value=event.value.text
+          -blocktrans trimmed with name=event.field.name value=event.value.text
             Field <b>{{ name }}</b> updated to <b>{{ value }}</b>
         -else
-          -blocktrans with name=event.field.name
+          -blocktrans trimmed with name=event.field.name
             Field <b>{{ name }}</b> cleared
 
       -elif event.type == 'contact_groups_changed'
@@ -82,14 +82,14 @@
 
       -elif event.type == 'contact_language_changed'
         -if event.language
-          -blocktrans with language=event.language
+          -blocktrans trimmed with language=event.language
             Language updated to <b>{{ language }}</b>
         -else
           -trans "Language cleared"
 
       -elif event.type == 'contact_name_changed'
         -if event.name
-          -blocktrans with name=event.name
+          -blocktrans trimmed with name=event.name
             Name updated to <b>{{ name }}</b>
         -else
           -trans "Name cleared"
@@ -103,7 +103,7 @@
         {{ event.text }}
 
       -elif event.type == 'email_created'
-        -blocktrans with subject=event.subject
+        -blocktrans trimmed with subject=event.subject
           Email sent with subject <b>{{ subject }}</b>
 
       -elif event.type == 'email_sent'
@@ -147,7 +147,7 @@
                 {% attachment_button attachment %}
 
       -elif event.type == 'run_result_changed'
-        -blocktrans with name=event.name category=event.category value=event.value
+        -blocktrans trimmed with name=event.name category=event.category value=event.value
           Run result <b>{{ name }}</b> updated to <b>{{ value }}</b> with category <b>{{ category }}</b>
 
       -elif event.type == 'ticket_opened'
@@ -196,7 +196,7 @@
   -if start_date
     %tr.archive-note
       %td(colspan=3)><
-        -blocktrans with start=start_date
+        -blocktrans trimmed with start=start_date
           Any messages prior to {{ start }} can be found in your
         %a(href="{% url 'archives.archive_message'%}")><
           -trans "archive"
