--- a/templates/msgs/broadcast_schedule_list.haml
+++ b/templates/msgs/broadcast_schedule_list.haml
@@ -18,12 +18,12 @@
             %td.value-contacts.field_phone
               -with recipient_counts=object.get_recipient_counts
                 -if recipient_counts.recipients > 0
-                  -blocktrans with count_comma=recipient_counts.recipients|intcomma count counter=recipient_counts.recipients
+                  -blocktrans trimmed with count_comma=recipient_counts.recipients|intcomma count counter=recipient_counts.recipients
                     {{ count_comma }} recipient
                     -plural
                       {{ count_comma }} recipients
                 -else
-                  -blocktrans with group_count=recipient_counts.groups contact_count=recipient_counts.contacts urn_count=recipient_counts.urns
+                  -blocktrans trimmed with group_count=recipient_counts.groups contact_count=recipient_counts.contacts urn_count=recipient_counts.urns
                     {{ group_count }} groups, {{ contact_count }} contacts, {{ urn_count }} urns
 
             %td.value-text.field_text
