--- a/templates/msgs/broadcast_update.haml
+++ b/templates/msgs/broadcast_update.haml
@@ -1,7 +1,5 @@
 -extends 'smartmin/form.html'
-
--load smartmin
--load i18n humanize
+-load smartmin i18n humanize
 
 -block fields
   .title
@@ -14,11 +12,11 @@
   -with recipient_counts=broadcast.get_recipient_counts
     -if recipient_counts.recipients > 0
       -blocktrans with count_comma=recipient_counts.recipients|intcomma count counter=recipient_counts.recipients
-          {{ count_comma }} recipients
+        {{ count_comma }} recipients
         -plural
           {{ count_comma }} recipients
     -else
-      -blocktrans with group_count=recipient_counts.groups contact_count=recipient_counts.contacts urn_count=recipient_counts.urns
+      -blocktrans trimmed with group_count=recipient_counts.groups contact_count=recipient_counts.contacts urn_count=recipient_counts.urns
         {{ group_count }} groups, {{ contact_count }} contacts, {{ urn_count }} urns
 
   #broadcast_preview
