--- a/templates/msgs/msg_filter.haml
+++ b/templates/msgs/msg_filter.haml
@@ -39,7 +39,7 @@
             {% if current_label.dependent_flows.count == 0 %}
               -trans "Once it is removed, it will be gone forever. There is no way to undo this operation."
             {% else %}
-              {% blocktrans count num_flows=current_label.dependent_flows.count %}
+              {% blocktrans trimmed count num_flows=current_label.dependent_flows.count %}
               Used by {{num_flows}} flow:
               {% plural %}
               Used by {{num_flows}} flows:
