--- a/templates/msgs/msg_send_modal.haml
+++ b/templates/msgs/msg_send_modal.haml
@@ -27,7 +27,7 @@
           #loading
         #errors
     -else
-      -blocktrans with name=brand.name
+      -blocktrans trimmed with name=brand.name
         To get started you need to add a channel to your workspace. A channel is a phone number or social network
         account which {{ name }} can use to send and receive messages on your behalf. You can choose to use an
         Android phone and your own cell phone plan, or we can connect you with a service provider in your country
