--- a/templates/orgs/org_languages.haml
+++ b/templates/orgs/org_languages.haml
@@ -3,10 +3,10 @@
 
 -block summary
   -if object.primary_language
-    -blocktrans with lang=object.primary_language.name
+    -blocktrans trimmed with lang=object.primary_language.name
       The primary language is <b>{{ lang }}</b>.
     -if languages
-      -blocktrans with lang=languages
+      -blocktrans trimmed with lang=languages
         Translations are provided in <b>{{lang}}</b>.
   -else
     -trans "Your workspace is configured to use a single language."
