--- a/templates/orgs/org_smtp_server.haml
+++ b/templates/orgs/org_smtp_server.haml
@@ -12,25 +12,25 @@
       -trans "Remove SMTP configuration"
 
 -block summary
-    -blocktrans with from_email=flow_from_email
+    -blocktrans trimmed with from_email=flow_from_email
       Emails sent from flows will come from <b>{{from_email}}</b>.
 
 -block pre-form
   .mb-4
-    -blocktrans with brand=brand.name
+    -blocktrans trimmed with brand=brand.name
       You can configure {{ brand }} to send emails generated within flows from an email address of your choosing. <br/>
       This will let you receive replies from your recipients.
 
   -if object.has_smtp_config and request.META.HTTP_X_FORMAX
     .mb-4
-      -blocktrans with from_email=flow_from_email
+      -blocktrans trimmed with from_email=flow_from_email
         If you no longer want to use {{ from_email }} to send emails, you can <a href='javascript:confirmSMTPRemove();'>remove your SMTP configuration</a>.
 
     .remove-smtp.hide
       .title
         -trans "Remove SMTP configuration"
       .body
-        -blocktrans with brand=brand.name
+        -blocktrans trimmed with brand=brand.name
           Removing your SMTP configuration will result in emails being delivered from {{ brand }} that cannot be replied to. Are you sure you want to continue?
     
       #remove-smtp-form{href:'{% url "orgs.org_smtp_server" %}?disconnect=true'}
