--- a/templates/archives/archive_list.haml
+++ b/templates/archives/archive_list.haml
@@ -2,7 +2,12 @@
 -load smartmin sms temba compress i18n humanize
 
 
+-block title
+  {{selected|title}}
 
+  -trans "Archives"
+
+-block subtitle
 
 -block page-title
   -trans "Archives"
@@ -27,26 +32,7 @@
   -else
     -trans "You do not have any message or run archives yet."
 
--block page-top
-  {% render as page_top %}
-    {{block.super}}
-  {% endrender %}
-  {{page_top}}
-
-
-
 -block content
-  %ul.flex.mb-2.border-b
-    -for type in archive_types
-      -if type.0 == selected
-        %li
-          .-mb-px.bg-white.inline-block.border-l.border-t.border-r.rounded-t.py-2.px-4.font-semibold.cursor-text.no-underline
-            {{ type.1 }}
-      -else
-        %li
-          %a.bg-white.inline-block.py-2.px-4.font-semibold(href="/archive/{{type.0}}/" class="hover:no-underline")
-            {{ type.1 }}
-
   -if object_list
     %table.archives.list.lined
       %thead
