Tweak rocket chat claim

--- a/templates/channels/channel_claim_authenticated.haml
+++ b/templates/channels/channel_claim_authenticated.haml
@@ -2,4 +2,5 @@
 -load i18n
 
 -block pre-form
-  -trans "You can connect your number by entering your credentials here."
+  .mb-6
+    -trans "Enter your credentials to add your number."
