--- a/templates/channels/types/rocketchat/claim.haml
+++ b/templates/channels/types/rocketchat/claim.haml
@@ -3,26 +3,26 @@
 
 -block pre-form
   -blocktrans trimmed with name=brand.name
-    You can connect your Facebook page to {{name}} in just a few simple steps.
+    You can connect Rocket.Chat to {{name}} in a few simple steps.
 
   %ol.list-decimal.ml-5.mt-3
-    %li.list-decimal
+    %li.list-decimal.my-2
       -blocktrans trimmed
         In your Rocket.Chat instance, go to <i>Administration</i> &gt; <i>Omnichannel</i> and enable it.
-    %li.list-decimal
+    %li.list-decimal.my-2
       -blocktrans trimmed
         Add a new user with the "bot" role (<i>Administration</i> &gt; <i>Users</i> &gt; <i>New</i>)
-    %li.list-decimal
+    %li.list-decimal.my-2
       -blocktrans trimmed with brand=brand.name
         Install the app <b>{{ brand }} Channel Integration</b> from the <i>Marketplace</i>.
-    %li.list-decimal
+    %li.list-decimal.my-2
       -blocktrans trimmed with brand=brand.name
         Open the app details at <i>Administration</i> &gt; <i>Apps</i> &gt; <i>{{ brand }} Channel Integration</i>, and in
-        its settings section put the following token in the <i>App's Secret</i> field: <code>{{ secret }}</code>
-    %li.list-decimal
+        its settings section put the following token in the <i>App's Secret</i> field: <div class="code">{{ secret }}</div>
+    %li.list-decimal.my-2
       -blocktrans trimmed with brand=brand.name
-        Save the changes. Copy the app's URL and paste in the URL field below.
-    %li.list-decimal
+        Save the changes. Copy the app's URL and paste it in the URL field. It should end with a long ID, for example: https://my.rocket.chat/api/apps/public/51c5cebe-b8e4-48ae-89d3-2b7746019cc4
+    %li.list-decimal.my-2
       -blocktrans trimmed
         You will also need a Auth Token and User ID which you can generate at <i>Profile</i> &gt; <i>My account</i> &gt;
         <i>Personal Access Tokens</i>. Ensure that <i>Ignore Two Factor Authentication</i> is checked.
