Tweak expected Rocket.Chat app name

--- a/templates/channels/types/rocketchat/claim.haml
+++ b/templates/channels/types/rocketchat/claim.haml
@@ -14,7 +14,7 @@
         Add a new user with the "bot" role (<i>Administration</i> &gt; <i>Users</i> &gt; <i>New</i>)
     %li.list-decimal.my-2
       -blocktrans trimmed with brand=brand.name
-        Install the app <b>{{ brand }} Channel Integration</b> from the <i>Marketplace</i>.
+        Install the app <b>{{ brand }} Channel</b> from the <i>Marketplace</i>.
     %li.list-decimal.my-2
       -blocktrans trimmed with brand=brand.name
         Open the app details at <i>Administration</i> &gt; <i>Apps</i> &gt; <i>{{ brand }} Channel Integration</i>, and in
