Undo Rocket.Chat icon addtion since this has already been added in channel work

--- a/static/fonts/temba/style.css
+++ b/static/fonts/temba/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'temba';
-  src:  url('fonts/temba.eot?zahimw');
-  src:  url('fonts/temba.eot?zahimw#iefix') format('embedded-opentype'),
-    url('fonts/temba.ttf?zahimw') format('truetype'),
-    url('fonts/temba.woff?zahimw') format('woff'),
-    url('fonts/temba.svg?zahimw#temba') format('svg');
+  src:  url('fonts/temba.eot?p4yg8w');
+  src:  url('fonts/temba.eot?p4yg8w#iefix') format('embedded-opentype'),
+    url('fonts/temba.ttf?p4yg8w') format('truetype'),
+    url('fonts/temba.woff?p4yg8w') format('woff'),
+    url('fonts/temba.svg?p4yg8w#temba') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
