Tweak connect page styling to match claim page Rocket.Chat channels

--- a/templates/tickets/ticketer_connect_form.haml
+++ b/templates/tickets/ticketer_connect_form.haml
@@ -1,12 +1,12 @@
 -extends "smartmin/form.html"
+-load smartmin
 
 -block title
   {{ title }}
 
 -block pre-form
-  .mb-6
-    {{ form_blurb }}
+  {{ form_blurb }}
 
--block fields
-  .w-128
-    {{block.super}}
+-block form
+  .card
+    {{ block.super }}
