Action button alignment on archived messages

--- a/templates/msgs/message_box.haml
+++ b/templates/msgs/message_box.haml
@@ -109,12 +109,12 @@
 
                       - if 'restore' in actions
                         .button-action.object-btn-restore
-                          .glyph.icon-download
+                          .-mt-1.mr-2.glyph.icon-download
                           -trans "Restore"
 
                       - if 'delete' in actions
                         .button-action.object-btn-delete
-                          .glyph.icon-remove
+                          .-mt-1.mr-2.glyph.icon-remove
                           -trans "Delete"
 
                       - if 'resend' in actions
