--- a/templates/frame.haml
+++ b/templates/frame.haml
@@ -406,6 +406,7 @@
         initSelect2Fields();
 
         $(".btn").tooltip();
+        $(".ccl-tooltip").tooltip();
 
         $('.org-header > .toggle').live('click', function(evt) {
           evt.stopPropagation();
