Fix broken ticket re-open button

--- a/templates/tickets/ticket_list.haml
+++ b/templates/tickets/ticket_list.haml
@@ -43,7 +43,7 @@
                         -trans "Close"
 
                     -if 'reopen' in actions
-                      .button-action.object-btn-close
+                      .button-action.object-btn-reopen
                         .-mt-1.mr-2.glyph.icon-folder-open
                         -trans "Reopen"
 
