--- a/templates/channels/types/line/claim.haml
+++ b/templates/channels/types/line/claim.haml
@@ -8,7 +8,7 @@
   -blocktrans trimmed
     To start creating a LINE bot, go to <a href="https://developers.line.me/messaging-api/getting-started">Getting started with the Messaging API</a>.
 
-  %ol.line-steps.card
+  %ol.steps.card
     %li
       -blocktrans trimmed
         Access the <a href="https://developers.line.me/channels/">LINE Channels</a> page and add a new Channel.</li>
@@ -19,24 +19,24 @@
 
     %li
       -blocktrans trimmed
-        Activate the permission to login via web application in the "Settings > Account > Allow login"
+        Activate the permission to login via web application in the <i>Settings</i> &gt; <i>Account</i> &gt; <i>Allow login</i>
 
     %li
       -blocktrans trimmed
-        Register your email and password via the application "Settings > Account > Email Account"
+        Register your email and password via the application <i>Settings</i> &gt; <i>Account</i> &gt; <i>Email Account</i>
 
     %li
       -blocktrans trimmed
         Create a new business account Line (With Messaging API enabled)
 
-      %ol.line-steps
+      %ol
         %li
           -blocktrans trimmed
-            In <a href="https://business.line.me/en/">LINE Business Center</a>, select "Messaging API" in the "Services"
+            In <a href="https://business.line.me/en/">LINE Business Center</a>, select <i>Messaging API</i> in <i>Services</i>
 
         %li
           -blocktrans trimmed
-            Select "Start using Messaging API"
+            Select <i>Start using Messaging API</i>
 
         %li
           -blocktrans trimmed
@@ -45,51 +45,49 @@
           .important
             %p
               -blocktrans trimmed
-                Note: At this time you must create a LINE business account and some information, for example, address, phone, etc., will be requested.
+                Note: At this time you must create a LINE business account and some information, for example, address,
+                phone, etc., will be requested.
 
         %li
           -blocktrans trimmed
-            After the creation process of the LINE business account, you will see the page to add a new channel of communication "Messaging API." Enter the name and select the appropriate category and click OK.
+            After the creation process of the LINE business account, you will see the page to add a new channel of
+            communication <i>Messaging API</i>. Enter the name and select the appropriate category and click OK.
 
         %li
           -blocktrans trimmed
-            In the next step, click the "LINE @ Manager" and it will redirect you to the API activation page.
+            In the next step, click the <i>LINE @ Manager</i> and it will redirect you to the API activation page.
 
         %li
           -blocktrans trimmed
-            Click "Enable API" and confirm. (By doing so, the status of your API will be "Valid")
+            Click "Enable API" and confirm. (By doing so, the status of your API will be <i>Valid</i>)
 
         %li
           -blocktrans trimmed
-            Enable the option to allow the use of Webhooks and click "Save."
+            Enable the option to allow the use of Webhooks and click <i>Save</i>.
 
     %li
       -blocktrans trimmed
         Set your bot:
 
-      %ol.line-steps
+      %ol
         %li
           -blocktrans trimmed
             Click on the menu "Accounts" at the top of the page at the link <a href="https://business.line.me">https://business.line.me</a>
 
         %li
           -blocktrans trimmed
-            In the communication channel of your choice, click on the "LINE Developers" button, accept the terms, and it will direct you to a page with the information needed to fill out in the form below (Channel ID, Channel Name, Channel Secret and Channel Access Token).
+            In the communication channel of your choice, click on the <i>LINE Developers</i> button, accept the terms,
+            and it will direct you to a page with the information needed to fill out in the form below
+            (Channel ID, Channel Name, Channel Secret and Channel Access Token).
 
           %p
             -blocktrans trimmed
-              Note: To generate the Channel Access Token click on "Issue" button
+              Note: To generate the Channel Access Token click on <i>Issue</i> button
 
 -block extra-style
   {{ block.super }}
 
   :css
-    ol.line-steps li {
-      margin-top: 10px;
-      list-style: decimal;
-      margin-left: 30px;
-    }
-
     .info {
       width: 800px;
       margin-bottom: 20px;
